  used to do with more than 2 field-ref elements, putting all fields in a
  single column
- Put CSS references back in theme instead of direct in webroot.xml, added
  support for header logo, header title, and body class in theme
- Added dark/light pseudo-theme switcher, switches body classes from
  Bootstrap on the fly and saves user preference (default comes from theme)

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release. Many of
the new features and bug fixes are related to multi-tenant support
including better isolation of tenants and tenant provisioning services.
Other fixes and improvements are related to Service ECA rules, jobs, DB
setup, and the tx cache.

This release also has various embedded documentation (annotations, etc)
improvements done along with the Making Apps with Moqui book which is now
available and has comprehensive documentation of Moqui Framework and a
summary of Mantle Business Artifacts.

NOTE: Starting with this version Moqui Framework requires Java 7 or later
because updated libraries require Java 7. Partly because of this Moqui
itself will also start to use Java 7 features.

New Features:

- Updated Apache Jackrabbit to 2.8.0, Apache Lucene to 4.8.1,
  ElasticSearch to 1.2.1